Use thumbnail image of video when loading page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
       </section>
   
       <section>
-        <iframe id="video" name="demo" src="https://www.youtube.com/embed/BhAKel39U5k" title="YouTube demo video of Boomerbuggy X" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe id="video" name="demo"
+        src="https://www.youtube.com/embed/BhAKel39U5k"
+        srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/BhAKel39U5k?autoplay=1><img src=https://img.youtube.com/vi/BhAKel39U5k/sddefault.jpg alt='Demo video of Boomerbuggy X mobility scooter'><span>▶</span></a>"
+        frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+        title="YouTube demo video of Boomerbuggy X"></iframe>
       </section>
   
       <section id="pricing">
