Add width & height to logo in HTML

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header id="header">
     <nav id="nav-bar" aria-label="Main Navigation">
-      <img id="header-img" src="images/logo.png" alt="Daymak company logo">
+      <img id="header-img" src="images/logo.png" alt="Daymak company logo" width="100px" height="100px">
   
       <ul class="nav-setting">
         <li class="enlarge"><a class="nav-link" href="#option-list">Options</a></li>
