Change reference url for background image
A smaller image size is being used than previously

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div>This page is not affiliated with, endorsed by, or sponsored by Daymak, Inc</div>
       <div>Daymak and its various marks are trademarks of Daymak, Inc</div>
       <div>Daymak logo from https://biz.prlog.org/daymak2/logo.png</div>
-      <div>Background image from https://img.wallpapersafari.com/desktop/1920/1080/0/47/Smd0jL.jpg</div>
+      <div>Background image from https://wallpapersafari.com/w/Smd0jL</div>
     </div>
   </footer>
 
