--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  
+  <!-- For mobile devices to render to the correct size -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Description for SEO -->
+  <meta name="description" content="A fully enclosed mobility scooter available in standard and luxurious model.">
+  
   <title>FCC: Product Landing Page</title>
 
   <link rel="stylesheet" href="style.css">
